--- a/src/App.scss
+++ b/src/App.scss
@@ -2,10 +2,19 @@
   display: flex;
   padding: 20px;
 
-  .building {
-    position: relative;
+
+
+  .towerButtons {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    gap: 5px;
+
+    .building {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+    }
   }
+
 }
